--- a/index.html
+++ b/index.html
@@ -276,7 +276,8 @@
       <div class="columns is-centered has-text-centered">
           <h2 class="title is-3">Our Generated Objects by One-Pass Feedforward Testing</h2>
       </div>
-      <div class="container" style="max-width: 700px; max-height: 700px;">
+<!--      <div class="container" style="max-width: 700px; max-height: 700px;">-->
+      <div class="container" style="max-width: 700px;">
         <div class="columns captioned_videos">
             <div class="column">
                 <video controls="" loop="" style="width: 100%; height: 100%; object-fit: fill">
@@ -355,6 +356,87 @@
                     <source src="./static/videos/a teddy bear sitting on books and wearing a scarf  and wearing a flat cap.mp4" type="video/mp4">
                 </video>
                 <h6 class="caption">a teddy bear sitting on books and wearing a scarf  and wearing a flat cap</h6>
+           </div>
+        </div>
+        <canvas height="125" class="videoMerge" id="ex2Merge" width="1002"></canvas>
+        <div class="columns captioned_videos">
+            <div class="column">
+                <video controls="" loop="" style="width: 100%; height: 100%; object-fit: fill">
+                    <source src="./static/videos/a white man wearing a steampunk hat is singing.mp4" type="video/mp4">
+                </video>
+                <h6 class="caption">a white man wearing a steampunk hat is singing</h6>
+            </div>
+            <div class="column">
+                <video controls="" loop="" style="width: 100%; height: 100%; object-fit: fill">
+                    <source src="./static/videos/a white woman wearing a peaked cap is grinning.mp4" type="video/mp4">
+                </video>
+                <h6 class="caption">a white woman wearing a peaked cap is grinning</h6>
+            </div>
+            <div class="column">
+                <video controls="" loop="" style="width: 100%; height: 100%; object-fit: fill">
+                    <source src="./static/videos/a wolf wearing a tie and wearing a party hat.mp4" type="video/mp4">
+                </video>
+                <h6 class="caption">a wolf wearing a tie and wearing a party hat</h6>
+           </div>
+           <div class="column">
+                <video controls="" loop="" style="width: 100%; height: 100%; object-fit: fill">
+                    <source src="./static/videos/a woman wearing a backpack is climbing a mountain.mp4" type="video/mp4">
+                </video>
+                <h6 class="caption">a woman wearing a backpack is climbing a mountain</h6>
+           </div>
+        </div>
+        <canvas height="125" class="videoMerge" id="ex2Merge" width="1002"></canvas>
+        <div class="columns captioned_videos">
+            <div class="column">
+                <video controls="" loop="" style="width: 100%; height: 100%; object-fit: fill">
+                    <source src="./static/videos/a woman wearing a long dress is playing with a dog.mp4" type="video/mp4">
+                </video>
+                <h6 class="caption">a woman wearing a long dress is playing with a dog</h6>
+            </div>
+            <div class="column">
+                <video controls="" loop="" style="width: 100%; height: 100%; object-fit: fill">
+                    <source src="./static/videos/a woman wearing a tailored suit is giving a presentation.mp4" type="video/mp4">
+                </video>
+                <h6 class="caption">a woman wearing a tailored suit is giving a presentation</h6>
+            </div>
+            <div class="column">
+                <video controls="" loop="" style="width: 100%; height: 100%; object-fit: fill">
+                    <source src="./static/videos/a woman with long hair wearing jeans is shopping.mp4" type="video/mp4">
+                </video>
+                <h6 class="caption">a woman with long hair wearing jeans is shopping</h6>
+           </div>
+           <div class="column">
+                <video controls="" loop="" style="width: 100%; height: 100%; object-fit: fill">
+                    <source src="./static/videos/an elderly and fat woman is trimming her plants.mp4" type="video/mp4">
+                </video>
+                <h6 class="caption">an elderly and fat woman is trimming her plants</h6>
+           </div>
+        </div>
+        <canvas height="125" class="videoMerge" id="ex2Merge" width="1002"></canvas>
+        <div class="columns captioned_videos">
+            <div class="column">
+                <video controls="" loop="" style="width: 100%; height: 100%; object-fit: fill">
+                    <source src="./static/videos/an elderly man wearing a peaked cap is grinning.mp4" type="video/mp4">
+                </video>
+                <h6 class="caption">an elderly man wearing a peaked cap is grinning</h6>
+            </div>
+            <div class="column">
+                <video controls="" loop="" style="width: 100%; height: 100%; object-fit: fill">
+                    <source src="./static/videos/an elderly woman wearing a Santa hat is looking ahead with a very serious expression.mp4" type="video/mp4">
+                </video>
+                <h6 class="caption">an elderly woman wearing a Santa hat is looking ahead with a very serious expression</h6>
+            </div>
+            <div class="column">
+                <video controls="" loop="" style="width: 100%; height: 100%; object-fit: fill">
+                    <source src="./static/videos/Kobe wearing a crown is crying.mp4" type="video/mp4">
+                </video>
+                <h6 class="caption">Kobe wearing a crown is crying</h6>
+           </div>
+           <div class="column">
+                <video controls="" loop="" style="width: 100%; height: 100%; object-fit: fill">
+                    <source src="./static/videos/Obama wearing a peaked cap is talking.mp4" type="video/mp4">
+                </video>
+                <h6 class="caption">Obama wearing a peaked cap is talking</h6>
            </div>
         </div>
       </div>
