--- a/index.html
+++ b/index.html
@@ -276,8 +276,8 @@
       <div class="columns is-centered has-text-centered">
           <h2 class="title is-3">Our Generated Objects by One-Pass Feedforward Testing</h2>
       </div>
-<!--      <div class="container" style="max-width: 700px; max-height: 700px;">-->
-      <div class="container" style="max-width: 700px;">
+      <canvas height="125" class="videoMerge" id="ex2Merge" width="1002"></canvas>
+      <div class="container" style="max-width: 800px;">
         <div class="columns captioned_videos">
             <div class="column">
                 <video controls="" loop="" style="width: 100%; height: 100%; object-fit: fill">
@@ -456,7 +456,7 @@
 </section> -->
 
 <canvas height="125" class="videoMerge" id="ex2Merge" width="1002"></canvas>
-<hr class="divider" />
+<!--<hr class="divider" />-->
 <footer class="footer">
   <div class="container">
 <!--     <div class="content has-text-centered">
