--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
           </div>
 
           <div class="is-size-5 publication-authors">
-            <span class="author-block"><sup>*</sup>Corresponding Author</span>
+            <span class="author-block"><sup>*</sup>Project Lead and Corresponding Author</span>
           </div>
 
           <div class="column has-text-centered">
@@ -276,8 +276,8 @@
       <div class="columns is-centered has-text-centered">
           <h2 class="title is-3">Our Generated Objects by One-Pass Feedforward Testing</h2>
       </div>
-      <canvas height="125" class="videoMerge" id="ex2Merge" width="1002"></canvas>
-      <div class="container" style="max-width: 800px;">
+      <canvas height="60" class="videoMerge" id="ex2Merge" width="1002"></canvas>
+      <div class="container" style="max-width: 900px;">
         <div class="columns captioned_videos">
             <div class="column">
                 <video controls="" loop="" style="width: 100%; height: 100%; object-fit: fill">
