--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
               <a href="https://scholar.google.com.sg/citations?user=DNuiPHwAAAAJ&hl=en">Shuicheng Yan</a><sup>3</sup>,
             </span>
             <span class="author-block">
-              <a href="https://scholar.google.com/citations?user=Ec5Biz4AAAAJ&hl=zh-CN">Xiangyu Xu</a><sup>*4</sup>.
+              <a href="https://xuxy09.github.io/">Xiangyu Xu</a><sup>*4</sup>
             </span>
           </div>
 
@@ -274,167 +274,167 @@
     <!-- Paper video. -->
       <hr class="divider" />
       <div class="columns is-centered has-text-centered">
-          <h2 class="title is-3">Our Generated Objects by One-Pass Feedforward Testing</h2>
+          <h2 class="title is-3">Text-to-3D within One-Pass of a Feedforward Network</h2>
       </div>
       <canvas height="60" class="videoMerge" id="ex2Merge" width="1002"></canvas>
       <div class="container" style="max-width: 900px;">
         <div class="columns captioned_videos">
             <div class="column">
-                <video controls="" loop="" style="width: 100%; height: 100%; object-fit: fill">
-                    <source src="./static/videos/a black man wearing a peaked cap is laughing.mp4" type="video/mp4">
+                <video controls="" loop="" style="width: 100%; object-fit: fill" autoplay>
+                    <source src="./static/videos/a black man wearing a peaked cap is laughing_croped.mp4" type="video/mp4">
                 </video>
                 <h6 class="caption">a black man wearing a peaked cap is laughing</h6>
             </div>
             <div class="column">
-                <video controls="" loop="" style="width: 100%; height: 100%; object-fit: fill">
-                    <source src="./static/videos/a boy wearing a peaked cap is angry.mp4" type="video/mp4">
+                <video controls="" loop="" style="width: 100%; object-fit: fill" autoplay>
+                    <source src="./static/videos/a boy wearing a peaked cap is angry_croped.mp4" type="video/mp4">
                 </video>
                 <h6 class="caption">a boy wearing a peaked cap is angry</h6>
             </div>
             <div class="column">
-                <video controls="" loop="" style="width: 100%; height: 100%; object-fit: fill">
-                    <source src="./static/videos/a dog wearing a tie  and wearing a party hat.mp4" type="video/mp4">
+                <video controls="" loop="" style="width: 100%; object-fit: fill" autoplay>
+                    <source src="./static/videos/a dog wearing a tie  and wearing a party hat_croped.mp4" type="video/mp4">
                 </video>
                 <h6 class="caption">a dog wearing a tie  and wearing a party hat</h6>
            </div>
            <div class="column">
-                <video controls="" loop="" style="width: 100%; height: 100%; object-fit: fill">
-                    <source src="./static/videos/a koala sitting on a stone and wearing a cape and wearing a cowboy hat.mp4" type="video/mp4">
+                <video controls="" loop="" style="width: 100%; object-fit: fill" autoplay>
+                    <source src="./static/videos/a koala sitting on a stone and wearing a cape and wearing a cowboy hat_croped.mp4" type="video/mp4">
                 </video>
                 <h6 class="caption">a koala sitting on a stone and wearing a cape and wearing a cowboy hat</h6>
            </div>
         </div>
-        <canvas height="125" class="videoMerge" id="ex2Merge" width="1002"></canvas>
+        <canvas height="25" class="videoMerge" id="ex2Merge" width="1002"></canvas>
         <div class="columns captioned_videos">
             <div class="column">
-                <video controls="" loop="" style="width: 100%; height: 100%; object-fit: fill">
-                    <source src="./static/videos/a man wearing a suit is working on a laptop.mp4" type="video/mp4">
+                <video controls="" loop="" style="width: 100%;  object-fit: fill" autoplay>
+                    <source src="./static/videos/a man wearing a suit is working on a laptop_croped.mp4" type="video/mp4">
                 </video>
                 <h6 class="caption">a man wearing a suit is working on a laptop</h6>
             </div>
             <div class="column">
-                <video controls="" loop="" style="width: 100%; height: 100%; object-fit: fill">
-                    <source src="./static/videos/a muscular man is exercising in a fitness room.mp4" type="video/mp4">
+                <video controls="" loop="" style="width: 100%;  object-fit: fill" autoplay>
+                    <source src="./static/videos/a muscular man is exercising in a fitness room_croped.mp4" type="video/mp4">
                 </video>
                 <h6 class="caption">a muscular man is exercising in a fitness room</h6>
             </div>
             <div class="column">
-                <video controls="" loop="" style="width: 100%; height: 100%; object-fit: fill">
-                    <source src="./static/videos/a panda sitting in a basket and wearing a straw hat.mp4" type="video/mp4">
+                <video controls="" loop="" style="width: 100%;  object-fit: fill" autoplay>
+                    <source src="./static/videos/a panda sitting in a basket and wearing a straw hat_croped.mp4" type="video/mp4">
                 </video>
                 <h6 class="caption">a panda sitting in a basket and wearing a straw hat</h6>
            </div>
            <div class="column">
-                <video controls="" loop="" style="width: 100%; height: 100%; object-fit: fill">
-                    <source src="./static/videos/a panda sitting in a bathtub and wearing a beanie.mp4" type="video/mp4">
+                <video controls="" loop="" style="width: 100%; object-fit: fill" autoplay>
+                    <source src="./static/videos/a panda sitting in a bathtub and wearing a beanie_croped.mp4" type="video/mp4">
                 </video>
                 <h6 class="caption">a panda sitting in a bathtub and wearing a beanie</h6>
            </div>
         </div>
-        <canvas height="125" class="videoMerge" id="ex2Merge" width="1002"></canvas>
+        <canvas height="25" class="videoMerge" id="ex2Merge" width="1002"></canvas>
         <div class="columns captioned_videos">
             <div class="column">
-                <video controls="" loop="" style="width: 100%; height: 100%; object-fit: fill">
-                    <source src="./static/videos/a pregnant woman wearing a dress is shopping.mp4" type="video/mp4">
+                <video controls="" loop="" style="width: 100%; object-fit: fill" autoplay>
+                    <source src="./static/videos/a pregnant woman wearing a dress is shopping_croped.mp4" type="video/mp4">
                 </video>
                 <h6 class="caption">a pregnant woman wearing a dress is shopping</h6>
             </div>
             <div class="column">
-                <video controls="" loop="" style="width: 100%; height: 100%; object-fit: fill">
-                    <source src="./static/videos/a rabbit sitting on a stone and wearing a tie.mp4" type="video/mp4">
+                <video controls="" loop="" style="width: 100%; object-fit: fill" autoplay>
+                    <source src="./static/videos/a rabbit sitting on a stone and wearing a tie_croped.mp4" type="video/mp4">
                 </video>
                 <h6 class="caption">a rabbit sitting on a stone and wearing a tie</h6>
             </div>
             <div class="column">
-                <video controls="" loop="" style="width: 100%; height: 100%; object-fit: fill">
-                    <source src="./static/videos/a teddy bear sitting on a stone and wearing a scarf  and wearing a flat cap.mp4" type="video/mp4">
+                <video controls="" loop="" style="width: 100%; object-fit: fill" autoplay>
+                    <source src="./static/videos/a teddy bear sitting on a stone and wearing a scarf  and wearing a flat cap_croped.mp4" type="video/mp4">
                 </video>
                 <h6 class="caption">a teddy bear sitting on a stone and wearing a scarf  and wearing a flat cap</h6>
            </div>
            <div class="column">
-                <video controls="" loop="" style="width: 100%; height: 100%; object-fit: fill">
-                    <source src="./static/videos/a teddy bear sitting on books and wearing a scarf  and wearing a flat cap.mp4" type="video/mp4">
+                <video controls="" loop="" style="width: 100%; object-fit: fill" autoplay>
+                    <source src="./static/videos/a teddy bear sitting on books and wearing a scarf  and wearing a flat cap_croped.mp4" type="video/mp4">
                 </video>
                 <h6 class="caption">a teddy bear sitting on books and wearing a scarf  and wearing a flat cap</h6>
            </div>
         </div>
-        <canvas height="125" class="videoMerge" id="ex2Merge" width="1002"></canvas>
+        <canvas height="25" class="videoMerge" id="ex2Merge" width="1002"></canvas>
         <div class="columns captioned_videos">
             <div class="column">
-                <video controls="" loop="" style="width: 100%; height: 100%; object-fit: fill">
-                    <source src="./static/videos/a white man wearing a steampunk hat is singing.mp4" type="video/mp4">
+                <video controls="" loop="" style="width: 100%;  object-fit: fill" autoplay>
+                    <source src="./static/videos/a white man wearing a steampunk hat is singing_croped.mp4" type="video/mp4">
                 </video>
                 <h6 class="caption">a white man wearing a steampunk hat is singing</h6>
             </div>
             <div class="column">
-                <video controls="" loop="" style="width: 100%; height: 100%; object-fit: fill">
-                    <source src="./static/videos/a white woman wearing a peaked cap is grinning.mp4" type="video/mp4">
+                <video controls="" loop="" style="width: 100%;  object-fit: fill" autoplay>
+                    <source src="./static/videos/a white woman wearing a peaked cap is grinning_croped.mp4" type="video/mp4">
                 </video>
                 <h6 class="caption">a white woman wearing a peaked cap is grinning</h6>
             </div>
             <div class="column">
-                <video controls="" loop="" style="width: 100%; height: 100%; object-fit: fill">
-                    <source src="./static/videos/a wolf wearing a tie and wearing a party hat.mp4" type="video/mp4">
+                <video controls="" loop="" style="width: 100%; object-fit: fill" autoplay>
+                    <source src="./static/videos/a wolf wearing a tie and wearing a party hat_croped.mp4" type="video/mp4">
                 </video>
                 <h6 class="caption">a wolf wearing a tie and wearing a party hat</h6>
            </div>
            <div class="column">
-                <video controls="" loop="" style="width: 100%; height: 100%; object-fit: fill">
-                    <source src="./static/videos/a woman wearing a backpack is climbing a mountain.mp4" type="video/mp4">
+                <video controls="" loop="" style="width: 100%;  object-fit: fill" autoplay>
+                    <source src="./static/videos/a woman wearing a backpack is climbing a mountain_croped.mp4" type="video/mp4">
                 </video>
                 <h6 class="caption">a woman wearing a backpack is climbing a mountain</h6>
            </div>
         </div>
-        <canvas height="125" class="videoMerge" id="ex2Merge" width="1002"></canvas>
+        <canvas height="25" class="videoMerge" id="ex2Merge" width="1002"></canvas>
         <div class="columns captioned_videos">
             <div class="column">
-                <video controls="" loop="" style="width: 100%; height: 100%; object-fit: fill">
-                    <source src="./static/videos/a woman wearing a long dress is playing with a dog.mp4" type="video/mp4">
+                <video controls="" loop="" style="width: 100%;  object-fit: fill" autoplay>
+                    <source src="./static/videos/a woman wearing a long dress is playing with a dog_croped.mp4" type="video/mp4">
                 </video>
                 <h6 class="caption">a woman wearing a long dress is playing with a dog</h6>
             </div>
             <div class="column">
-                <video controls="" loop="" style="width: 100%; height: 100%; object-fit: fill">
-                    <source src="./static/videos/a woman wearing a tailored suit is giving a presentation.mp4" type="video/mp4">
+                <video controls="" loop="" style="width: 100%;  object-fit: fill" autoplay>
+                    <source src="./static/videos/a woman wearing a tailored suit is giving a presentation_croped.mp4" type="video/mp4">
                 </video>
                 <h6 class="caption">a woman wearing a tailored suit is giving a presentation</h6>
             </div>
             <div class="column">
-                <video controls="" loop="" style="width: 100%; height: 100%; object-fit: fill">
-                    <source src="./static/videos/a woman with long hair wearing jeans is shopping.mp4" type="video/mp4">
+                <video controls="" loop="" style="width: 100%; object-fit: fill" autoplay>
+                    <source src="./static/videos/a woman with long hair wearing jeans is shopping_croped.mp4" type="video/mp4">
                 </video>
                 <h6 class="caption">a woman with long hair wearing jeans is shopping</h6>
            </div>
            <div class="column">
-                <video controls="" loop="" style="width: 100%; height: 100%; object-fit: fill">
-                    <source src="./static/videos/an elderly and fat woman is trimming her plants.mp4" type="video/mp4">
+                <video controls="" loop="" style="width: 100%; object-fit: fill" autoplay>
+                    <source src="./static/videos/an elderly and fat woman is trimming her plants_croped.mp4" type="video/mp4">
                 </video>
                 <h6 class="caption">an elderly and fat woman is trimming her plants</h6>
            </div>
         </div>
-        <canvas height="125" class="videoMerge" id="ex2Merge" width="1002"></canvas>
+        <canvas height="25" class="videoMerge" id="ex2Merge" width="1002"></canvas>
         <div class="columns captioned_videos">
             <div class="column">
-                <video controls="" loop="" style="width: 100%; height: 100%; object-fit: fill">
-                    <source src="./static/videos/an elderly man wearing a peaked cap is grinning.mp4" type="video/mp4">
+                <video controls="" loop="" style="width: 100%;  object-fit: fill" autoplay>
+                    <source src="./static/videos/an elderly man wearing a peaked cap is grinning_croped.mp4" type="video/mp4">
                 </video>
                 <h6 class="caption">an elderly man wearing a peaked cap is grinning</h6>
             </div>
             <div class="column">
-                <video controls="" loop="" style="width: 100%; height: 100%; object-fit: fill">
-                    <source src="./static/videos/an elderly woman wearing a Santa hat is looking ahead with a very serious expression.mp4" type="video/mp4">
+                <video controls="" loop="" style="width: 100%;  object-fit: fill" autoplay>
+                    <source src="./static/videos/an elderly woman wearing a Santa hat is looking ahead with a very serious expression_croped.mp4" type="video/mp4">
                 </video>
                 <h6 class="caption">an elderly woman wearing a Santa hat is looking ahead with a very serious expression</h6>
             </div>
             <div class="column">
-                <video controls="" loop="" style="width: 100%; height: 100%; object-fit: fill">
-                    <source src="./static/videos/Kobe wearing a crown is crying.mp4" type="video/mp4">
+                <video controls="" loop="" style="width: 100%; object-fit: fill" autoplay>
+                    <source src="./static/videos/Kobe wearing a crown is crying_croped.mp4" type="video/mp4">
                 </video>
                 <h6 class="caption">Kobe wearing a crown is crying</h6>
            </div>
            <div class="column">
-                <video controls="" loop="" style="width: 100%; height: 100%; object-fit: fill">
-                    <source src="./static/videos/Obama wearing a peaked cap is talking.mp4" type="video/mp4">
+                <video controls="" loop="" style="width: 100%; object-fit: fill" autoplay>
+                    <source src="./static/videos/Obama wearing a peaked cap is talking_croped.mp4" type="video/mp4">
                 </video>
                 <h6 class="caption">Obama wearing a peaked cap is talking</h6>
            </div>
@@ -442,20 +442,22 @@
       </div>
     <!--/ Paper video. -->
   </div>
+
 </section>
-<!-- <section class="section" id="BibTeX">
+
+<section class="section" id="BibTeX">
   <div class="container is-max-desktop content">
     <h2 class="title">BibTeX</h2>
-    <pre><code>@article{liu2023hosnerf,
-  title     = {HOSNeRF: Dynamic Human-Object-Scene Neural Radiance Fields from a Single Video},
-  author    = {Liu, Jia-Wei and Cao, Yan-Pei and Yang, Tianyuan and Xu, Eric Zhongcong and Keppo, Jussi and Shan, Ying and Qie, Xiaohu and Shou, Mike Zheng},
-  journal   = {arXiv preprint arXiv:2304.12281},
+    <pre><code>@article{li2023instant3d,
+  title     = {Instant3D: Instant Text-to-3D Generation},
+  author    = {Li, Ming and Zhou, Pan and Liu, Jia-Wei, and Lin, Min and Keppo, Jussi and Yan, Shuicheng and Xu, Xiangyu},
+  journal   = {preprint},
   year      = {2023},
 }</code></pre>
   </div>
-</section> -->
+</section>
 
-<canvas height="125" class="videoMerge" id="ex2Merge" width="1002"></canvas>
+<canvas height="25" class="videoMerge" id="ex2Merge" width="1002"></canvas>
 <!--<hr class="divider" />-->
 <footer class="footer">
   <div class="container">
