--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
     <div class="container is-max-desktop">
       <div class="columns is-centered">
         <div class="column has-text-centered">
-          <h1 class="title is-1 publication-title"><i>Instant3D</i> : Instant Text-to-3D Generation</h1>
+          <h1 class="title is-1 publication-title">&#9889; <i>Instant3D</i> : Instant Text-to-3D Generation</h1>
           <div class="is-size-5 publication-authors">
             <span class="author-block">
               <a href="https://ming1993li.github.io//">Ming Li</a><sup>1</sup>,</span>
@@ -226,7 +226,7 @@
       <hr class="divider" />
     <div class="columns is-centered has-text-centered">
       <div class="column is-four-fifths">
-        <h2 class="title is-3">Motivations</h2>
+        <h2 class="title is-3">Motivation</h2>
         <div class="content has-text-justified">
           <p>
                 Comparison of existing SOTA methods with our
@@ -239,7 +239,7 @@
                 <b>25ms</b>.
           </p>
           <div class="content has-text-centered">
-            <img src="./static/images/teaser.jpg" style="width: 65%"/>
+            <img src="./static/images/rabbit.png" style="width: 80%"/>
           </div>
         </div>
       </div>
@@ -274,7 +274,7 @@
     <!-- Paper video. -->
       <hr class="divider" />
       <div class="columns is-centered has-text-centered">
-          <h2 class="title is-3">Text-to-3D within One-Pass of a Feedforward Network</h2>
+          <h2 class="title is-3">Results of <i>Instant3D</i></h2>
       </div>
       <canvas height="60" class="videoMerge" id="ex2Merge" width="1002"></canvas>
       <div class="container" style="max-width: 900px;">
