--- a/index.html
+++ b/index.html
@@ -450,7 +450,7 @@
     <h2 class="title">BibTeX</h2>
     <pre><code>@article{li2023instant3d,
   title     = {Instant3D: Instant Text-to-3D Generation},
-  author    = {Li, Ming and Zhou, Pan and Liu, Jia-Wei, and Lin, Min and Keppo, Jussi and Yan, Shuicheng and Xu, Xiangyu},
+  author    = {Li, Ming and Zhou, Pan and Liu, Jia-Wei, and Keppo, Jussi and Lin, Min and Yan, Shuicheng and Xu, Xiangyu},
   journal   = {preprint},
   year      = {2023},
 }</code></pre>
