--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
                 </a>
               </span> -->
               <span class="link-block">
-                <a href=""
+                <a href="http://arxiv.org/abs/2311.08403"
                    class="external-link button is-normal is-rounded is-dark">
                   <span class="icon">
                       <i class="ai ai-arxiv"></i>
