--- a/index.html
+++ b/index.html
@@ -137,12 +137,12 @@
                 </a>
               </span> -->
               <span class="link-block">
-                <a href="http://arxiv.org/abs/2311.08403"
+                <a href="http://arxiv.org/abs/2311.08403.pdf"
                    class="external-link button is-normal is-rounded is-dark">
                   <span class="icon">
                       <i class="ai ai-arxiv"></i>
                   </span>
-                  <span>arXiv</span>
+                  <span>Paper</span>
                 </a>
               </span>
               <!-- Video Link. -->
