--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
                 </a>
               </span> -->
               <span class="link-block">
-                <a href=""
+                <a href="http://arxiv.org/abs/2311.08403"
                    class="external-link button is-normal is-rounded is-dark">
                   <span class="icon">
                       <i class="ai ai-arxiv"></i>
@@ -451,7 +451,7 @@
     <pre><code>@article{li2023instant3d,
   title     = {Instant3D: Instant Text-to-3D Generation},
   author    = {Li, Ming and Zhou, Pan and Liu, Jia-Wei, and Keppo, Jussi and Lin, Min and Yan, Shuicheng and Xu, Xiangyu},
-  journal   = {preprint},
+  journal   = {arxiv: 2311.08403},
   year      = {2023},
 }</code></pre>
   </div>
