--- a/index.html
+++ b/index.html
@@ -157,11 +157,12 @@
               </span> -->
               <!-- Code Link. -->
               <span class="link-block">
-                <a class="external-link button is-normal is-rounded is-dark">
+                <a href="https://github.com/ming1993li/Instant3DCodes" 
+                  class="external-link button is-normal is-rounded is-dark">
                   <span class="icon">
                       <i class="fab fa-github"></i>
                   </span>
-                  <span>Code (Coming Soon!)</span>
+                  <span>Code</span>
                   </a>
               </span>
               <!-- Dataset Link. -->
